syntax = "proto3";
import "google/protobuf/timestamp.proto";


service ReservationRpc{
  rpc GetReservationById (ReservationRequest) returns (ReservationResponse);
}

message ReservationRequest{
  int32 id = 1;
}

message ReservationResponse {
  int32 reservation_id = 1;
  int32 customer_id = 2;
  string customer_name = 3;
  int32 restaurant_id = 4;
  string restaurant_name = 5;
  optional int32 table_id = 6;
  google.protobuf.Timestamp reservation_date = 7;
  int32 party_size = 8;
}